# ramparts

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  INSTALL.md  LICENSE-PROXY  MCP-Dockerfile  Makefile  README.md  REGRESSION_TEST_SUITE.md  config.yaml  docker-compose.yml  test.py
.github/workflows/: build-binaries.yml  cron.yml  e2e.yml  regression_tests.yml  release-docker.yml  release.yml
common/: Cargo.toml
common/src/: lib.rs
docs/: api.md  configuration.md  installation.md  latest-formats.md  proxy.md  security-features.md  troubleshooting.md  usage.md
examples/: stdio_example.md
gemini-cli-integration/: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  package.json
gemini-cli-integration/docs/: MCP-SERVER.md  README.md  TOML-COMMANDS.md
gemini-cli-integration/examples/: demo-workflow.md  sample-configurations.md  use-cases.md
gemini-cli-integration/mcp-server/: package.json  tsconfig.json
gemini-cli-integration/mcp-server/src/: index.ts  ramparts-client.ts
gemini-cli-integration/mcp-server/src/prompts/: index.ts
gemini-cli-integration/mcp-server/src/tools/: index.ts
gemini-cli-integration/scripts/: install-mcp-server.sh  install-slash-commands.sh  setup-complete-integration.sh  validate-installation.sh
gemini-cli-integration/slash-commands/: ramparts-audit.toml  ramparts-quick.toml  ramparts-scan.toml
gemini-cli-integration/slash-commands/security/: monitor.toml  scan.toml
proxy/: Cargo.toml
proxy/src/: cache.rs  config.rs  javelin.rs  lib.rs  licensing.rs  main.rs  mcp_server.rs  proxy.rs  validation_service.rs
scan/: Cargo.toml
scan/src/: core.rs  main.rs  types.rs
scripts/: run_regression_tests.sh
src/: config.rs  constants.rs  lib.rs  main.rs  mcp_client.rs  mcp_server.rs  scanner.rs  server.rs  test_utils.rs  utils.rs
src/security/: mod.rs
tests/: demo_regression_test.rs  integration_clean_mcp.rs  integration_risk_cases.rs  integration_risky_mcp.rs  mcp_protocol_tests.rs  regression_test_suite.rs  test_runner.rs
